# python-start

./: .gitignore  README.md  build.go  build_test.go  buildpack.toml  detect.go  detect_test.go  go.mod  go.sum  init_test.go  integration.json
integration/: default_test.go  init_test.go  use_package_managers_test.go
integration/testdata/conda_app/: environment.yml
integration/testdata/module_app/: Procfile  requirements.txt
integration/testdata/module_app/module/: server.py  wsgi.py
integration/testdata/pipenv_app/: Pipfile
integration/testdata/pixi_app/: pixi.toml
integration/testdata/poetry/: pyproject.toml
integration/testdata/sources/: server.py
integration/testdata/uv_app/: pyproject.toml
run/: main.go
