[tool.poetry]
name = "default_app"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "==3.0.0"
Jinja2 = "==3.1.6"
MarkupSafe = "==3.0.2"
Werkzeug = "==3.1.3"
gunicorn = "==23.0.0"
itsdangerous = "==2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
